[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcc"
version = "1.0.0"
description = "Python SDK for the AgentCC LLM Gateway — OpenAI-compatible, type-safe, with guardrails and observability"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Future AGI", email = "engineering@futureagi.com" },
]
keywords = ["llm", "gateway", "openai", "proxy", "guardrails", "agentcc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.7",
    "anyio>=4.0,<5.0",
]

[project.optional-dependencies]
testing = ["pytest>=7.0", "respx>=0.21", "pytest-asyncio>=0.23"]
callbacks = []
otel = [
    "opentelemetry-api>=1.0",
    "opentelemetry-sdk>=1.0",
]
validation = ["jsonschema>=4.0"]
tiktoken = ["tiktoken>=0.5"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
dev = ["agentcc[testing,otel,validation,tiktoken]", "ruff>=0.3", "mypy>=1.8"]
all = ["agentcc[testing,otel,validation,tiktoken,langchain,llamaindex]"]

[project.urls]
Homepage = "https://github.com/future-agi/agent-command-center"
Documentation = "https://docs.futureagi.com/prism/sdk/python"
Repository = "https://github.com/future-agi/agent-command-center"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcc"]

# --- Dev dependencies ---

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "respx>=0.21",
    "mypy>=1.8",
    "pyright>=1.1",
    "ruff>=0.3",
]

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# --- Ruff ---

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentcc"]

# --- Mypy ---

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

# --- Pyright ---

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
include = ["src/agentcc"]
